# ZFFmpeg

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zasko/zffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zasko/zffmpeg/: MainActivity.java
app/src/main/java/com/zasko/zffmpeg/sureface/: MGLRender.java  MGLSurfaceView.java  MSurfaceView.java  Square.java  SurfaceViewActivity.java  Triangle.java
app/src/main/res/layout/: activity_main.xml  activity_surface_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zasko/zffmpeg/: ExampleUnitTest.java
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/com/zasko/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: zplay-lib.cpp  zplay-lib.h
ffmpeg/src/main/cpp/pcm/: ZPcm2wav.cpp  ZPcm2wav.h
ffmpeg/src/main/debug/: AndroidManifest.xml
ffmpeg/src/main/java/com/zasko/ffmpeg/: RenderManager.java
ffmpeg/src/main/java/com/zasko/ffmpeg/debug/: MainActivity.java
ffmpeg/src/main/jniLibs/x86/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg/src/test/java/com/zasko/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
